--- a/src/components/distribStyl.css
+++ b/src/components/distribStyl.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('./fridge.jpg'); /* Add the path to your image here */
+    /* background-image: url('./fridge.jpg'); Add the path to your image here */
     background-size: cover; /* Ensure the image covers the whole background */
     background-position: right; /* Position the background image to the right */
     background-repeat: no-repeat; /* Prevent the image from repeating */
