--- a/src/components/SupplierPage/Navigation.css
+++ b/src/components/SupplierPage/Navigation.css
@@ -67,9 +67,9 @@ body, html {
     
   }
   
-  #fridge {
-    background-image: url('./WhatsApp\ Image\ 2024-07-27\ at\ 4.12.26\ AM.jpeg'); 
-    height: 600px;
+  #sup {
+    background-image: url('./bly.jpeg'); 
+    height: 50em;
 }
   
   #contact {
